--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "postinstall": "grunt",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -11,6 +12,8 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "^4.13.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.8.2",
     "jade": "~1.11.0",
     "kerberos": "0.0.17",
     "mongodb": "^2.1.0",
