--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "grunt",
+    "postinstall": "grunt copy",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-copy": "^0.8.2",
     "jade": "~1.11.0",
     "kerberos": "0.0.17",
