--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "angular": "^1.4.8",
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.6",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "^4.13.3",
