--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
+    "angular-material": "^1.0.2",
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.6",
     "cookie-parser": "~1.3.5",
